centering middle button

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -29,7 +29,7 @@ id='infoBut'></input>
 </div>
 <br>
 
-<div id="divCtrls" >
+<div id="divCtrls">
 
 <div class="leftButton">Discard:</div>
 <div class="rightButton">Pick up:</div>
@@ -37,7 +37,7 @@ id='infoBut'></input>
 <br>
 
 <div class="cardButton leftButton">
-<input type='button'  value='L' style='width:2em;background-color:Chartreuse;height:2em;font-size:large;'
+<input type='button'  value='' style='width:2em;background-color:Chartreuse;height:2em;font-size:large;'
 id='discardBut'></input>
 </div>
 
@@ -49,7 +49,7 @@ id='passBut'></input>
 </div>
 
 <div class="cardButton rightButton">
-<input type='button'   value='R' style='width:2em;background-color:Chartreuse;height:2.0em;font-size:large;'
+<input type='button'   value='' style='width:2em;background-color:Chartreuse;height:2.0em;font-size:large;'
 id='pickupBut'></input>
 </div>
 
