--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -70,9 +70,8 @@ id='newBut'></input>
 
 <div
 class="rightButton">
-<input type='button' class="button" value='Reveal
-Hidden'
-style='width:12.0ex;background-color:DarkGreen;height:4em;font-size:medium;'
+<input type='button' class="button" value='Reveal'
+style='width:12.0ex;background-color:DarkGreen;height:2em;font-size:medium;'
 id='revealBut'></input>
 </div>
 
